--- a/lib/css/home.css
+++ b/lib/css/home.css
@@ -50,7 +50,7 @@
 }
 
 .content>h1 {
-    font-size: 50px;
+    font-size: calc(50px * 1.25);
     font-weight: 600;
 }
 
@@ -205,7 +205,7 @@ h2 {
 }
 
 .pSlider {
-    height: 450px;
+    height: 500px;
     margin: auto;
     position: relative;
     width: 90%;
@@ -225,7 +225,7 @@ h2 {
 }
 
 .pSlide {
-    height: 420px;
+    height: 470px;
     width: 288px;
     display: flex;
     align-items: center;
@@ -272,7 +272,7 @@ h2 {
 
 /* 顧客回饋區塊 */
 .pSlider2 {
-    height: 380px;
+    height: 450px;
     margin: auto;
     position: relative;
     width: 90%;
